2008-04-21  Lin Ma  <Lin.Ma@Sun.COM>

	* fen/fen-data.c, fen/fen-helper.c, fen/fen-missing.c, fen/fen-node.c:
	Default disable all loggings.
	* fen/fen-kernel.c: (printevent), (port_add_kevent),
	(port_fetch_event_cb): Fixed two macro nits.

2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	* xdgmime/xdgmime.c: Rework the timestamp checking code
	to protect against duplicate directories in XDG_DATA_DIRS.
	Fixes fd.o bug 12513, reported by Joe Shaw.

2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	Partically revert the last commit after realizing that
	xdg_mime_media_type_equal doesn't have to init at all.

	* xdgmime/xdgmime.h:
	* xdgmime/xdgmime.c: Get rid of _xdg_mime_media_type_equal

	* xdgmime/xdgmimecache.c: Use xdg_mime_media_type_equal

2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	Avoid possible memory corruption in xdgmime, fd.o bug 12512,
	reported by Joe Shaw and Federico Mena Quintero.

	* xdgmime/xdgmime.c(_xdg_mime_media_type_equal): Implement.
	(xdg_mime_media_type_equal): Turn into a wrapper around the 
	_-prefixed version.

	* xdgmime/xdgmimecache.c: Use the _-prefixed versions of comparison
	functions throughout.

2008-04-16  Michael Meeks  <michael.meeks@novell.com>

	* gdesktopappinfo.c (g_desktop_app_info_new_from_filename): 
	tolerate an empty TryExec= line without failing; nautilus used
	to create launchers with these in previous versions. Fixes #528433

2008-04-09  Padraig O'Briain  <padraig.obriain@sun.com>

	* gdesktopappinfo.c: In g_app_info_create_from_commandline set comment
	after name. Fixes #527132.

2008-04-08  Tomas Bzatek  <tbzatek@redhat.com>

	* gfile.c: (g_file_replace):
	Doc update

2008-04-07  Matthias Clasen  <mclasen@redhat.com>

	Bug 526796 – Wrong order of arguments in g_file_copy's fallback

	* gfile.c (file_copy_fallback): Fix the argument order. Patch
	by Christian Kellner.

2008-04-04  Sebastien Bacher  <seb128@ubuntu.com>

	* gunixmounts.c: (g_unix_mount_guess_should_display):