@@ -1,3 +1,7 @@
+2008-04-22  Michael Natterer  <mitch@imendio.com>
+
+	* Makefile.am: fix library versioning (it was 0.0.0).
+
 2008-04-21  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* fen/fen-data.c, fen/fen-helper.c, fen/fen-missing.c, fen/fen-node.c:
